--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ add_executable(OS_HW1_WET main.cpp)
 
 add_executable(smash
         smash/smash.cpp
-        smash/Commands.cpp
+        smash/commands.cpp
         smash/signals.cpp
         )
